--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,13 +29,13 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     // AndroidX
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha03"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha04"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     // Anko
@@ -46,6 +46,10 @@ dependencies {
     def butterknife_version = "10.1.0"
     implementation "com.jakewharton:butterknife:$butterknife_version"
     kapt "com.jakewharton:butterknife-compiler:$butterknife_version"
+
+    // CardView
+    def cardview_version = "1.0.0"
+    implementation "androidx.cardview:cardview:$cardview_version"
 
     // Coroutines
     def coroutines_version = "1.1.0"
@@ -75,20 +79,27 @@ dependencies {
     def material_version = "1.1.0-alpha05"
     implementation "com.google.android.material:material:$material_version"
 
+    // RecyclerView
+    def recyclerview_version = "1.1.0-alpha04"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
+
     // Retrofit
     def retrofit_version = "2.5.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
     // Room
     def room_version = "2.1.0-alpha06"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
-    implementation "androidx.room:room-coroutines:2.1.0-alpha04"
+    implementation 'androidx.room:room-coroutines:2.1.0-alpha04'
 
     // JUnit
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.2-alpha02"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.2.0-alpha02"
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test:runner:1.2.0-alpha03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha03'
+
+    // YouTube
+    implementation files('libs/YouTubeAndroidPlayerApi.jar')
 }
